--- a/Pipfile
+++ b/Pipfile
@@ -11,8 +11,11 @@ hypercorn = "*"
 pydantic = "*"
 pylast = "*"
 shortuuid = "*"
+pandas = "*"
+matplotlib = "*"
 
 [dev-packages]
+ipykernel = "*"
 
 [requires]
 python_version = "3.12"
